@@ -1,0 +1,3 @@
+# BBB module will be removed in Plone 4.0
+#     zope 2 interfaces created at runtime:
+#     - ITranslatable
