@@ -23,7 +23,7 @@ from Products.Five import BrowserView as BaseView
 from Products.Five.bridge import fromZ2Interface
 from Products.CMFCore.utils import ToolInit as CMFCoreToolInit
 from Products.CMFCore.utils import getToolByName
-from Products.CMFPlone.interfaces.Translatable import ITranslatable
+from Products.CMFPlone.interfaces import ITranslatable
 import transaction
 
 from Products.PageTemplates.GlobalTranslationService import \
@@ -135,11 +135,11 @@ def isIDAutoGenerated(context, id):
     return False
 
 def lookupTranslationId(obj, page, ids):
-    implemented = ITranslatable.isImplementedBy(obj)
+    implemented = ITranslatable.providedBy(obj)
     if not implemented or implemented and not obj.isTranslation():
         pageobj = getattr(obj, page, None)
         if (pageobj is not None and
-            ITranslatable.isImplementedBy(pageobj)):
+            ITranslatable.providedBy(pageobj)):
             translation = pageobj.getTranslation()
             if (translation is not None and
                 ids.has_key(translation.getId())):
